@@ -1,11 +1,13 @@
-import java.awt.Dimension;
-import java.awt.GraphicsEnvironment;
-import java.awt.Rectangle;
-
 /**
  *
  * @author pquiring
  */
+
+import java.awt.*;
+import java.awt.event.*;
+
+import javaforce.*;
+
 public class GetValue2 extends javax.swing.JDialog {
 
   /**
@@ -28,6 +30,8 @@ public class GetValue2 extends javax.swing.JDialog {
     slider2.setMaximum(max2);
     slider2.setValue(value2);
     setPosition();
+    JF.assignHotKey(this, ok, KeyEvent.VK_ENTER);
+    JF.assignHotKey(this, cancel, KeyEvent.VK_ESCAPE);
   }
 
   /**
