@@ -1,11 +1,13 @@
-import java.awt.Dimension;
-import java.awt.GraphicsEnvironment;
-import java.awt.Rectangle;
-
 /**
  *
  * @author pquiring
  */
+
+import java.awt.*;
+import java.awt.event.*;
+
+import javaforce.*;
+
 public class GetXY extends javax.swing.JDialog {
 
   /**
@@ -18,6 +20,8 @@ public class GetXY extends javax.swing.JDialog {
     width.setText("" + ix);
     height.setText("" + iy);
     setPosition();
+    JF.assignHotKey(this, ok, KeyEvent.VK_ENTER);
+    JF.assignHotKey(this, cancel, KeyEvent.VK_ESCAPE);
   }
 
   /**
