@@ -1,5 +1,8 @@
 Whatsnew ...
 
+Dec 26, 2015 - v0.21 released!
+  - fix : added ENTER/ESCAPE hot keys to dialog boxes
+
 Dec 17, 2015 - v0.20 released!
   - fix : selection box is placed in top/left view port when scrolled or zoomed (was placed at image top/left)
   - fix : selecting fill tool in transparent mode would disable transparency slider
